# double-pendulum-float-error

./: .gitmodules  CMakeLists.txt  README.md
src/: mainwindow.cpp  mainwindow.h  simulation.cpp  simulation.h  simulation_interface.cpp  simulation_interface.h  simulationwidget.cpp  simulationwidget.h  simulationworker.cpp  simulationworker.h
